--- a/style.css
+++ b/style.css
@@ -11,6 +11,28 @@ html {
 	margin: 0%;
 	padding: 0%;
 }
+.codebox textarea{
+	width: 97%;
+	height: 200px;
+	margin-left: -15px;
+	resize: none;
+	background: #202020;
+	color: rgb(241, 241, 241);
+	font-size: 15px;
+}
+textarea::-webkit-scrollbar {
+    width: 3px;
+}
+
+textarea::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: #e7c82f;
+  outline: 1px solid slategrey;
+}
 /**  Global style  **/
 .mr-rl{
 	margin-left: 4%;
@@ -388,6 +410,9 @@ a:active,a:focus {
 	color: #eee;
 	background: #111111;
 }
+
+/** Codebox **/
+
 
 /** About section begin **/
 .about-section{
@@ -1474,17 +1499,7 @@ a img {
 body {
 	letter-spacing:1px;
 }
-body,select,textarea {
-	color:#666666;
-	font-family:inherit;
-	font-size:14px;
-	line-height:1.8;
-	word-wrap:break-word;
-	-webkit-hyphens:auto;
-	 -moz-hyphens:auto;
-	 -ms-hyphens:auto;
-			hyphens:auto;
-}
+
 h1,h2,h3,h4,h5,h6 {
 	font-weight:700;
 	margin-top:20px;
@@ -3215,9 +3230,6 @@ h6 { font-size: 12px; }
 body,
 input,
 select,
-textarea {
-	color: #888888;
-}
 h1, h2, h3, h4, h5, h6 {
 	color: #222222;
 }
@@ -3243,12 +3255,4 @@ h1, h2, h3, h4, h5, h6 {
 	margin-top:15px;
 	text-align:center;
 	display: none;
-}
-.error input, input.error, .error textarea, textarea.error {
-    background-color: #ffffff;
-    border: 1px solid orangered !Important;
-    -webkit-transition: border linear 0.2s,box-shadow linear 0.2s;
-    -moz-transition: border linear 0.2s,box-shadow linear 0.2s;
-    -o-transition: border linear 0.2s,box-shadow linear 0.2s;
-    transition: border linear 0.2s,box-shadow linear 0.2s;
 }
